# psychosis-FC-prediction

./: CPM.py  README.md  bprs_data.csv  low_signal_regions.txt  pyproject.toml  sofas_data.csv  subjects_ses-1.txt  subjects_ses-2.txt
data/: README.md  bprs_change_scores.txt  bprs_change_scores_medication.txt  bprs_change_scores_placebo.txt  bprs_lm_slopes.txt  bprs_pos_change_scores.txt  sofas_change_scores.txt  sofas_change_scores_medication.txt  sofas_change_scores_placebo.txt  sofas_lm_slopes.txt
scripts/: CPM.py  KRR.m  KRR_null.m  README.md  combine_krr_nulls.py  make_FC.R  make_KRR_inputs.m  make_figures.R  make_figures_groups.R  make_figures_lmslopes.R  make_results_figures.R  meta-matching.py  meta_matching.py  run_CPM.sh  run_KRR.sh  run_KRR_perms.m  run_KRR_repeats.m  run_meta-matching.sh  submit_CPM.sh  submit_KRR.sh  submit_meta-matching.sh
timeseries/dt_AROMA_8Phys-4GMR_bpf/: README.md
timeseries/dt_AROMA_8Phys-4GMR_bpf/ses-1/: ts_sub-003_ses-1.txt  ts_sub-008_ses-1.txt  ts_sub-009_ses-1.txt  ts_sub-011_ses-1.txt  ts_sub-014_ses-1.txt  ts_sub-016_ses-1.txt  ts_sub-019_ses-1.txt  ts_sub-021_ses-1.txt  ts_sub-023_ses-1.txt  ts_sub-024_ses-1.txt  ts_sub-026_ses-1.txt  ts_sub-030_ses-1.txt  ts_sub-031_ses-1.txt  ts_sub-034_ses-1.txt  ts_sub-035_ses-1.txt  ts_sub-036_ses-1.txt  ts_sub-037_ses-1.txt  ts_sub-038_ses-1.txt  ts_sub-039_ses-1.txt  ts_sub-041_ses-1.txt  ts_sub-043_ses-1.txt  ts_sub-044_ses-1.txt  ts_sub-047_ses-1.txt  ts_sub-048_ses-1.txt  ts_sub-049_ses-1.txt  ts_sub-051_ses-1.txt  ts_sub-052_ses-1.txt  ts_sub-053_ses-1.txt  ts_sub-054_ses-1.txt  (+1 more)
(+246 files in other folders)
