[project]
name = "psychosis-fc-prediction"
version = "0.1.0"
description = "Repository for Pope et al. (2025): Functional Coupling and Longitudinal Outcome Prediction in First-Episode Psychosis"
readme = "README.md"
requires-python = "==3.8.8"
dependencies = [
    "numpy==1.19.2",
    "pandas>=1.1.5",
    "scikit-learn==0.23.2",
    "scipy==1.7.3",
    "torch==1.7.1",
]
